// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dropdown Appearances 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1cpmtjf=""
  >
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          medium default
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          medium subtle
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-1c2g7cd=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-12qzma8=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-cfp7r0=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          small default
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-1tv1187=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-1tbr04a=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          small subtle
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-cdtd9o=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-1wx2y9r=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-cfp7r0=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Appearances With Error 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1cpmtjf=""
  >
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          medium default
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          medium subtle
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-1c2g7cd=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-12qzma8=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-cfp7r0=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          small default
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-1tv1187=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-1tbr04a=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          small subtle
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-cdtd9o=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-1wx2y9r=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-cfp7r0=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Basic 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Compare Disabled 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1cpmtjf=""
  >
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          Normal
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  I'm normal, see
                </span>
                <span
                  data-css-13czx1q=""
                >
                  I'm normal, see
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        data-css-o89kbw=""
      >
        Still normal
      </div>
    </div>
    <div
      data-css-xsf0go=""
    >
      <label>
        <span>
          I'm not usable
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={true}
              id="dropdown-button-4fzzzxjyl"
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  I'm untouchable
                </span>
                <span
                  data-css-13czx1q=""
                >
                  I'm untouchable
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        data-css-o89kbw=""
      >
        Neither am I
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Compare Gaps 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1cpmtjf=""
  >
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          Problem field
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          Problem field
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          Problem field
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-1c2g7cd=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-12qzma8=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-cfp7r0=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          Problem field
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-1c2g7cd=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-12qzma8=""
                >
                  Some placeholder
                </span>
              </span>
              <div
                data-css-cfp7r0=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Disabled 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-xsf0go=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={true}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Disabled Items 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Error 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-in6gqi=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-vaotfo=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Label Only 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown List With Divider 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown List With Icons 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Long Placeholder 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                This one is longer than any menu item
              </span>
              <span
                data-css-13czx1q=""
              >
                This one is longer than any menu item
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Max Height 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown No Labels 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span
        data-css-6wu9td=""
      >
        Dropdown
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-label="You need an a11y label"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Preselected By Label 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-phnd7x=""
              >
                Item 3
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Preselected Value 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-phnd7x=""
              >
                Item 2
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Preselected Value Unknown 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Can't find item
              </span>
              <span
                data-css-13czx1q=""
              >
                Can't find item
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Stacked 1`] = `
<div
  data-css-424rvd=""
>
  <div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          Level
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Three and the amazing item
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Select one
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          Level
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Three and the amazing item
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Select another one
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Sub Label Only 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span
        data-css-6wu9td=""
      >
        Dropdown
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-label="You need an a11y label"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown Super Long Item Label 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                This level really is the longest level that anyone has ever seen. There is none longer
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/advanced Custom Icon 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <div
                data-css-1ehc3sz=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
              </div>
              <div
                data-css-1evu87j=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Some placeholder
                </span>
              </div>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/advanced Dynamic Custom Icon 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            id="dropdown-button-4fzzzxjyl"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <div
                data-css-1ehc3sz=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="author kit icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      clipRule="evenodd"
                      d="M14.99 11c0 1.66-1.33 3-2.99 3-1.66 0-3-1.34-3-3V5c0-1.66 1.34-3 3-3s3 1.34 3 3l-.01 6zM12 3.7c-.66 0-1.2.54-1.2 1.2v6.2c0 .66.54 1.2 1.2 1.2.66 0 1.19-.54 1.19-1.2l.01-6.2c0-.66-.54-1.2-1.2-1.2zm5.269 7.757a5.153 5.153 0 01-.08.611c-.52 2.419-2.77 4.032-5.189 4.032s-4.668-1.613-5.188-4.03a5.15 5.15 0 01-.081-.613.5.5 0 00-.498-.457H5.53a.5.5 0 00-.498.54c.02.261.046.47.075.628.535 2.869 2.995 5.12 5.892 5.552V20H9.5a.5.5 0 00-.5.5v1a.5.5 0 00.5.5h5a.5.5 0 00.5-.5v-1a.5.5 0 00-.5-.5H13v-2.28c2.927-.428 5.409-2.72 5.908-5.64.024-.137.044-.318.061-.542a.5.5 0 00-.498-.538h-.704a.5.5 0 00-.498.457z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <div
                data-css-1evu87j=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-phnd7x=""
                >
                  Author Kit
                </span>
              </div>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/examples Autofocused 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-ottiud=""
  >
    <label>
      <span>
        The label
      </span>
    </label>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            aria-haspopup="listbox"
            aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
            data-css-185vr3w=""
            disabled={false}
            id="dropdown-button-4fzzzxjyl"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              data-css-1m4meif=""
            >
              <span
                aria-hidden={true}
                data-css-mlkf0z=""
              >
                Some placeholder
              </span>
              <span
                data-css-13czx1q=""
              >
                Some placeholder
              </span>
            </span>
            <div
              data-css-19x2evt=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/examples Controlled 1`] = `
<div
  data-css-424rvd=""
>
  <div>
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          The label
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Some placeholder
                </span>
                <span
                  data-css-phnd7x=""
                >
                  Item: two
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        data-css-o89kbw=""
      >
        The sub label
      </div>
    </div>
    <br />
    <br />
    <div
      data-css-c8tnxo=""
    >
      <span>
        Current value: 
        two
      </span>
      <br />
      <button
        onClick={[Function]}
      >
        Clear value
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/examples Style Fixed Width 1`] = `
<div
  data-css-424rvd=""
>
  <div>
    <div
      data-css-ottiud=""
      style={
        Object {
          "width": 150,
        }
      }
    >
      <label>
        <span>
          Fixed Width
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  One item One item One item One item One item One item
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Change me
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <br />
    <br />
    <div
      data-css-ottiud=""
    >
      <label>
        <span>
          Width determined by longest item
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  One item One item One item One item One item One item
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Change me
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/examples Style Full Width 1`] = `
<div
  data-css-424rvd=""
>
  <div
    style={
      Object {
        "border": "1px solid blue",
        "width": "500px",
      }
    }
  >
    <div
      data-css-ottiud=""
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <label>
        <span>
          First
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                />
                <span
                  data-css-13czx1q=""
                />
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <label>
        <span>
          Second
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                />
                <span
                  data-css-13czx1q=""
                />
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <label>
        <span>
          Third
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-1c2g7cd=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                />
                <span
                  data-css-12qzma8=""
                />
              </span>
              <div
                data-css-cfp7r0=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-ottiud=""
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <label>
        <span>
          Fourth
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-1c2g7cd=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                />
                <span
                  data-css-12qzma8=""
                />
              </span>
              <div
                data-css-cfp7r0=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/examples Style Right Aligned 1`] = `
<div
  data-css-424rvd=""
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <div
        data-css-ottiud=""
      >
        <label>
          <span
            data-css-6wu9td=""
          >
            Dropdown
          </span>
        </label>
        <div
          data-css-8befsb=""
        >
          <div
            data-css-3ah8pf=""
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                aria-haspopup="listbox"
                aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
                data-css-185vr3w=""
                disabled={false}
                id="dropdown-button-4fzzzxjyl"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <span
                  data-css-1m4meif=""
                >
                  <span
                    aria-hidden={true}
                    data-css-mlkf0z=""
                  >
                    Filter
                  </span>
                  <span
                    data-css-13czx1q=""
                  >
                    Filter
                  </span>
                </span>
                <div
                  data-css-19x2evt=""
                >
                  <div
                    data-css-7dab2f=""
                  >
                    <svg
                      aria-label="caret down icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "2px dashed green",
          "height": "50px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/Dropdown/examples Style Viewport Bottom 1`] = `
<div
  data-css-424rvd=""
>
  <div
    style={
      Object {
        "alignItems": "flex-end",
        "display": "flex",
        "height": "100%",
      }
    }
  >
    <div
      data-css-ottiud=""
    >
      <label>
        <span
          data-css-6wu9td=""
        >
          Dropdown
        </span>
      </label>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              aria-haspopup="listbox"
              aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
              data-css-185vr3w=""
              disabled={false}
              id="dropdown-button-4fzzzxjyl"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <span
                data-css-1m4meif=""
              >
                <span
                  aria-hidden={true}
                  data-css-mlkf0z=""
                >
                  Menu appears above
                </span>
                <span
                  data-css-13czx1q=""
                >
                  Menu appears above
                </span>
              </span>
              <div
                data-css-19x2evt=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
